--- a/index.html
+++ b/index.html
@@ -1609,7 +1609,7 @@
       <div class="desktop-sub">Preview simulator · AIM · Multi-user</div>
       <div class="desktop-desc">
         Desktop icons = /desktop. Explorer, Notepad, Browser, Host.exe, Regedit, Settings, AIM OS, Paint, and Media Player all live in this HTML.<br/>
-        .exe files run as base64 HTML payloads inside the Windows Host Application.
+        .exe files run as base64 HTML payloads inside the Windows Host Application. MIT © 2026 Alaric Holt
       </div>
       <div class="desktop-aim-chip">
         <div class="aim-dot"></div>
