--- a/index.html
+++ b/index.html
@@ -1619,7 +1619,7 @@
     <div id="desktop-icons"></div>
     <div class="desktop-bottom-left">
       <div><strong>Win12 Preview Simulator AIM</strong></div>
-      <div>Nothing touches real files. All FS, content, exe payloads, and associations live in localStorage.</div>
+      <div>Nothing touches real files, only export and import sessions. All FS, content, exe payloads, and associations live in localStorage. MIT © 2026 Alaric Holt</div>
     </div>
 <!-- DESKTOP WIDGETS LAYER (widgets appear here in normal mode) -->
 <div id="desktop-widgets-layer"></div>
