--- a/index.html
+++ b/index.html
@@ -5,12 +5,52 @@
 <link rel="icon" type="image/svg+xml" href="win12-icon.svg">
 <script src="https://unpkg.com/dom-to-image-more@3.4.3/dist/dom-to-image-more.min.js"></script>
 <title>Win12 Simulator – Browser OS</title>
-<meta name="description" content="A full Windows 12 style desktop simulator built in HTML, CSS, and JavaScript.">
-<meta name="keywords" content="Windows simulator, Win12, HTML OS, desktop simulation, web OS">
-<meta name="robots" content="index, follow">
-<meta property="og:title" content="Win12 Simulator">
-<meta property="og:description" content="A full Windows 12 style desktop simulator built in HTML, CSS, and JavaScript.">
+<!-- Primary Metadata -->
+<meta name="description" content="A fully interactive WebOS simulation built by Alaric Holt. Experience windows, apps, widgets, themes, and system tools in a single-file operating system.">
+<meta name="author" content="Alaric Holt">
+<meta name="keywords" content="Win12 Simulator, WebOS, Alaric Holt, Windows Simulator, Online OS, Browser OS, Win12, Operating System Simulation">
+
+<!-- Canonical Identity -->
+<link rel="canonical" href="https://alaricholt677.github.io/">
+
+<!-- OpenGraph (Social + Bing Preview) -->
+<meta property="og:title" content="Win12 Simulator — WebOS by Alaric Holt">
+<meta property="og:description" content="A subsystem-complete WebOS simulation running entirely in your browser. Built as a single-file OS with apps, widgets, themes, and system tools.">
+<meta property="og:url" content="https://alaricholt677.github.io/">
 <meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Win12 Simulator — WebOS by Alaric Holt">
+<meta name="twitter:description" content="A fully interactive WebOS simulation built as a single-file operating system.">
+
+<!-- Robots -->
+<meta name="robots" content="index, follow">
+<meta name="googlebot" content="index, follow">
+<meta name="bingbot" content="index, follow">
+
+<!-- Viewport + Charset -->
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- JSON-LD Structured Data (Bing LOVES this) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "SoftwareApplication",
+  "name": "Win12 Simulator",
+  "operatingSystem": "Web",
+  "applicationCategory": "BrowserApplication",
+  "creator": {
+    "@type": "Person",
+    "name": "Alaric Holt"
+  },
+  "description": "A subsystem-complete WebOS simulation built as a single-file operating system with apps, widgets, themes, and system tools.",
+  "url": "https://alaricholt677.github.io/",
+  "softwareVersion": "1.0"
+}
+</script>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style id="base-style">
     :root {
