--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <script src="https://unpkg.com/dom-to-image-more@3.4.3/dist/dom-to-image-more.min.js"></script>
 <title>Win12 Simulator – Browser OS</title>
 <!-- Primary Metadata -->
-<meta name="description" content="A fully interactive WebOS simulation built by Alaric Holt. Experience windows, apps, widgets, themes, and system tools in a single-file operating system.">
+<meta name="description" content="A fully interactive Advanced WebOS simulation built by Alaric Holt. Experience windows, apps, widgets, themes, and system tools in a single-file operating system.">
 <meta name="author" content="Alaric Holt">
 <meta name="keywords" content="Win12 Simulator, WebOS, Alaric Holt, Windows Simulator, Online OS, Browser OS, Win12, Operating System Simulation">
 
