--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 <meta name="robots" content="index, follow">
 <meta name="googlebot" content="index, follow">
 <meta name="bingbot" content="index, follow">
+  
+<!-- Manifest -->
+<link rel="manifest" href="/manifest.json">
 
 <!-- Viewport + Charset -->
 <meta charset="UTF-8">
